try to fix jquery slide jump up

--- a/media/style.css
+++ b/media/style.css
@@ -61,7 +61,7 @@ input[type=text] { width: 100%; }
 label {font-weight: normal;}
 
 div.table,
-div.table table {position: relative}
+div.table table {position: relative; width: 848px;}
 
 form#zayavka p{padding-top: 2px;}
 #id_math_captcha_field {width: 85%; float:right; margin-right: 2px;}
